# FastGlobalRegistration

source/: CMakeLists.txt
source/apps/: CMakeLists.txt  faGlobalRegistration.cpp
